small z-index fix

--- a/src/stylesheets/objects/_o.skeleton.scss
+++ b/src/stylesheets/objects/_o.skeleton.scss
@@ -32,10 +32,6 @@
       z-index: 2;
    }
 
-   .o-skeleton__feet{
-      z-index: -1;
-   }
-
    .o-skeleton__body{
       position: relative;
    	flex: 1 0 auto;
